# GGBoy-Core

./: CMakeLists.txt  LICENSE  README.md
Core/: CMakeLists.txt
Core/include/: Audio.hpp  AudioProcessingUnit.hpp  BUS.hpp  CPU.hpp  CPUInstructions.hpp  CPUState.hpp  Cartridge.hpp  Constants.hpp  Emulator.hpp  FrameBuffer.hpp  GBCColorRAM.hpp  Input.hpp  Logging.hpp  MemoryBankController.hpp  MemoryBankControllerNone.hpp  NoiseChannel.hpp  PixelProcessingUnit.hpp  RenderingUtility.hpp  Ringbuffer.hpp  Serialization.hpp  SquareWaveChannel.hpp  Timer.hpp  Utility.cpp  Utility.hpp  WaveChannel.hpp
Core/include/Audio/: AudioCommon.hpp  AudioProcessingUnit.hpp  NoiseChannel.hpp  SquareWaveChannel.hpp  WaveChannel.hpp
Core/include/Cartridge/: Cartridge.hpp  MemoryBankController.hpp  MemoryBankControllerFive.hpp  MemoryBankControllerNone.hpp  MemoryBankControllerOne.hpp  MemoryBankControllerThree.hpp
Core/src/: Audio.cpp  AudioProcessingUnit.cpp  BUS.cpp  CPU.cpp  CPUInstructions.cpp  CPUState.cpp  Cartridge.cpp  Emulator.cpp  FrameBuffer.cpp  GBCColorRAM.cpp  Input.cpp  Logging.cpp  MemoryBankControllerNone.cpp  MemoryBankControllerOne.cpp  NoiseChannel.cpp  PixelProcessingUnit.cpp  RenderingUtility.cpp  SquareWaveChannel.cpp  Timer.cpp  Utility.cpp  WaveChannel.cpp
Core/src/Audio/: AudioCommon.cpp  AudioProcessingUnit.cpp  NoiseChannel.cpp  SquareWaveChannel.cpp  WaveChannel.cpp
Core/src/Cartridge/: Cartridge.cpp  MemoryBankController.cpp  MemoryBankControllerFive.cpp  MemoryBankControllerNone.cpp  MemoryBankControllerOne.cpp  MemoryBankControllerThree.cpp
MainApp/: CMakeLists.txt
MainApp/include/: Audio.hpp  EmulatorMain.hpp  Inputhandling.hpp  Video.hpp
MainApp/src/: Audio.cpp  EmulatorMain.cpp  Inputhandling.cpp  Video.cpp  main.cpp
include/: BUS.hpp  CPU.hpp  CPUState.hpp  Constants.hpp  Emulator.hpp  GBCColorRAM.hpp  Input.hpp  Logging.hpp  PixelProcessingUnit.hpp  RenderingUtility.hpp  Ringbuffer.hpp  Serialization.hpp  Timer.hpp  Utility.hpp
include/Audio/: AudioCommon.hpp  AudioProcessingUnit.hpp  NoiseChannel.hpp  SquareWaveChannel.hpp  WaveChannel.hpp
include/Cartridge/: Cartridge.hpp  MemoryBankController.hpp  MemoryBankControllerFive.hpp  MemoryBankControllerNone.hpp  MemoryBankControllerOne.hpp  MemoryBankControllerThree.hpp
src/: BUS.cpp  CPU.cpp  CPUInstructions.cpp  CPUState.cpp  Emulator.cpp  GBCColorRAM.cpp  Input.cpp  Logging.cpp  PixelProcessingUnit.cpp  RenderingUtility.cpp  Timer.cpp  Utility.cpp
src/Audio/: AudioCommon.cpp  AudioProcessingUnit.cpp  NoiseChannel.cpp  SquareWaveChannel.cpp  WaveChannel.cpp
src/Cartridge/: Cartridge.cpp  MemoryBankController.cpp  MemoryBankControllerFive.cpp  MemoryBankControllerNone.cpp  MemoryBankControllerOne.cpp  MemoryBankControllerThree.cpp
